верстка, кнопки для разных цветов

--- a/app/index.html
+++ b/app/index.html
@@ -28,11 +28,30 @@
 		<div class="row">
 			<div class="col-xs-12">	
 				<label for="color">Введите код цвета </label><input type="text" name="color" id="color" class="form-control">
-				
-
+				<div class="menu-color">
+					<button class="btn btn-success menu-color__item"></button>
+					<button class="btn btn-success menu-color__item"></button>
+					<button class="btn btn-success menu-color__item"></button>
+					<button class="btn btn-success menu-color__item"></button>
+					<button class="btn btn-success menu-color__item"></button>
+					<button class="btn btn-success menu-color__item"></button>
+					<button class="btn btn-success menu-color__item"></button>
+					<button class="btn btn-success menu-color__item"></button>
+					
+					<!-- <div class="menu-color__item" id="randomcolor"></div>
+					<div class="menu-color__item" id="randomcolor"></div>
+					<div class="menu-color__item" id="randomcolor"></div>
+					<div class="menu-color__item" id="randomcolor"></div>
+					<div class="menu-color__item" id="randomcolor"></div>
+					<div class="menu-color__item" id="randomcolor"></div>
+					<div class="menu-color__item" id="randomcolor"></div>
+					<div class="menu-color__item" id="randomcolor"></div> -->
+				</div>
+			
 				<button class="btn btn-success btn-custom" id="drawASquare" onclick="figureColor()" style="display: inline-block;">Cменить цвет</button>
 				<button class="btn btn-success btn-custom" id="drawASquare" onclick="randomColor()" style="display: inline-block;">Случайный цвет</button>
 				<div class="random-color" id="randomcolor"></div>
+			
 			</div>
 		</div>
 		<div class="row">
