--- a/app/index.html
+++ b/app/index.html
@@ -29,14 +29,14 @@
 			<div class="col-xs-12">	
 				<label for="color">Введите код цвета </label><input type="text" name="color" id="color" class="form-control">
 				<div class="menu-color">
-					<button class="btn btn-success menu-color__item"></button>
-					<button class="btn btn-success menu-color__item"></button>
-					<button class="btn btn-success menu-color__item"></button>
-					<button class="btn btn-success menu-color__item"></button>
-					<button class="btn btn-success menu-color__item"></button>
-					<button class="btn btn-success menu-color__item"></button>
-					<button class="btn btn-success menu-color__item"></button>
-					<button class="btn btn-success menu-color__item"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(255, 0, 0)')" style="background-color: RGB(255,0,0);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(0, 255, 0)')" style="background-color: RGB(0,255,0);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(0, 0, 255)')" style="background-color: RGB(0,0,255);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(255, 255, 0)')" style="background-color: RGB(255, 255, 0);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(255, 165, 0)')" style="background-color: RGB(255, 165, 0);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(255, 0, 255)')" style="background-color: RGB(255, 0, 255);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(0, 255, 255)')" style="background-color: RGB(0, 255, 255);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(153, 50, 204)')" style="background-color: RGB(153, 50, 204);"></button>
 					
 					<!-- <div class="menu-color__item" id="randomcolor"></div>
 					<div class="menu-color__item" id="randomcolor"></div>
