--- a/app/index.html
+++ b/app/index.html
@@ -20,42 +20,32 @@
 	<div class="col-xs-3">
 		<div class="row">
 			<div class="col-xs-12 ">
-				<div class="left-menu-border">	
+				<div class="left-menu-border">
 				<canvas height='80' width='250' id='canvasLeft'>Обновите браузер</canvas>
 				</div>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12">	
+			<div class="col-xs-12">
 				<label for="color">Введите код цвета </label><input type="text" name="color" id="color" class="form-control">
 				<div class="menu-color">
-					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(255, 0, 0)')" style="background-color: RGB(255,0,0);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(0, 255, 0)')" style="background-color: RGB(0,255,0);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(0, 0, 255)')" style="background-color: RGB(0,0,255);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(255, 255, 0)')" style="background-color: RGB(255, 255, 0);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(255, 165, 0)')" style="background-color: RGB(255, 165, 0);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(255, 0, 255)')" style="background-color: RGB(255, 0, 255);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(0, 255, 255)')" style="background-color: RGB(0, 255, 255);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButtin('RGB(153, 50, 204)')" style="background-color: RGB(153, 50, 204);"></button>
-					
-					<!-- <div class="menu-color__item" id="randomcolor"></div>
-					<div class="menu-color__item" id="randomcolor"></div>
-					<div class="menu-color__item" id="randomcolor"></div>
-					<div class="menu-color__item" id="randomcolor"></div>
-					<div class="menu-color__item" id="randomcolor"></div>
-					<div class="menu-color__item" id="randomcolor"></div>
-					<div class="menu-color__item" id="randomcolor"></div>
-					<div class="menu-color__item" id="randomcolor"></div> -->
+					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(255, 0, 0)')" style="background-color: RGB(255,0,0);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(0, 255, 0)')" style="background-color: RGB(0,255,0);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(0, 0, 255)')" style="background-color: RGB(0,0,255);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(255, 255, 0)')" style="background-color: RGB(255, 255, 0);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(255, 165, 0)')" style="background-color: RGB(255, 165, 0);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(255, 0, 255)')" style="background-color: RGB(255, 0, 255);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(0, 255, 255)')" style="background-color: RGB(0, 255, 255);"></button>
+					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(153, 50, 204)')" style="background-color: RGB(153, 50, 204);"></button>
 				</div>
-			
-				<button class="btn btn-success btn-custom" id="drawASquare" onclick="figureColor()" style="display: inline-block;">Cменить цвет</button>
-				<button class="btn btn-success btn-custom" id="drawASquare" onclick="randomColor()" style="display: inline-block;">Случайный цвет</button>
+
+				<button class="btn btn-success btn-custom" id="changeColor" onclick="figureColor()" style="display: inline-block;">Cменить цвет</button>
+				<button class="btn btn-success btn-custom" id="randomColorBtn" onclick="colorHandler()" style="display: inline-block;">Случайный цвет</button>
 				<div class="random-color" id="randomcolor"></div>
-			
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12">	
+			<div class="col-xs-12">
 				<button class="btn btn-success" id="drawASquare" onclick="clearCanvas()">Стереть</button>
 			</div>
 		</div>
@@ -74,7 +64,7 @@
 	</div>
 </div>
 
-		
+
 
 </div>
 
@@ -86,6 +76,6 @@
 <!-- endinject -->
 <!-- inject:js -->
 <!-- app scripts will go here... -->
-<!-- endinject -->	
+<!-- endinject -->
 </body>
 </html>
