1) выделение лении 2) тень выделенного объекта 3) удаление выделенного объекта клавишей delete

--- a/app/index.html
+++ b/app/index.html
@@ -59,9 +59,14 @@
 	</div>
 </div>
 <div class="row">
-	<div class="col-xs-12">
-
+    <div class="col-xs-3">
+        <button class="btn btn-success btn-custom">Save to JSON</button>
+        <button class="btn btn-success btn-custom">Load from JSON</button>
+    </div>
+	<div class="col-xs-9">
+        <input type="textarea" style="width:100%; margin-top:10px;">
 	</div>
+
 </div>
 
 
