--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
         <button class="btn btn-success btn-custom" onclick="loadFromJSON()">Load from JSON</button>
     </div>
 	<div class="col-xs-9">
-        <textarea style="width:100%; height: 200px;" rows="10" id="jsontext"></textarea>
+        <textarea style="width:100%; margin-top: 10px;" rows="10" id="jsontext"></textarea>
 	</div>
 
 </div>
@@ -79,8 +79,12 @@
 <!-- libs:js -->
 <!-- custom libs scripts will go here... -->
 <!-- endinject -->
-<!-- inject:js -->
-<!-- app scripts will go here... -->
-<!-- endinject -->
+<script src="resources/js/constructors/shape.js"></script>
+<script src="resources/js/constructors/circle.js"></script>
+<script src="resources/js/constructors/line.js"></script>
+<script src="resources/js/constructors/square.js"></script>
+<script src="resources/js/script.js"></script>
+<script src="resources/js/models/index.js"></script>
+
 </body>
 </html>
