--- a/app/index.html
+++ b/app/index.html
@@ -79,12 +79,16 @@
 <!-- libs:js -->
 <!-- custom libs scripts will go here... -->
 <!-- endinject -->
+<script src="resources/js/script.js"></script>
+<script src="resources/js/util/index.js"></script>
+<script src="resources/js/view/index.js"></script>
 <script src="resources/js/constructors/shape.js"></script>
 <script src="resources/js/constructors/circle.js"></script>
 <script src="resources/js/constructors/line.js"></script>
 <script src="resources/js/constructors/square.js"></script>
-<script src="resources/js/script.js"></script>
+
 <script src="resources/js/models/index.js"></script>
+
 
 </body>
 </html>
