--- a/app/index.html
+++ b/app/index.html
@@ -39,8 +39,8 @@
 					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(153, 50, 204)')" style="background-color: RGB(153, 50, 204);"></button>
 				</div>
 
-				<button class="btn btn-success btn-custom" id="changeColor" onclick="figureColor()" style="display: inline-block;">Cменить цвет</button>
-				<button class="btn btn-success btn-custom" id="randomColorBtn" onclick="colorHandler()" style="display: inline-block;">Случайный цвет</button>
+				<button class="btn btn-success btn-custom" id="changeColor" style="display: inline-block;">Cменить цвет</button>
+				<button class="btn btn-success btn-custom" id="randomColorBtn" style="display: inline-block;">Случайный цвет</button>
 				<div class="random-color" id="randomcolor"></div>
 			</div>
 		</div>
@@ -79,15 +79,18 @@
 <!-- libs:js -->
 <!-- custom libs scripts will go here... -->
 <!-- endinject -->
+
 <script src="resources/js/script.js"></script>
+<script src="resources/js/models/index.js"></script>
 <script src="resources/js/util/index.js"></script>
+
 <script src="resources/js/view/index.js"></script>
 <script src="resources/js/constructors/shape.js"></script>
 <script src="resources/js/constructors/circle.js"></script>
 <script src="resources/js/constructors/line.js"></script>
 <script src="resources/js/constructors/square.js"></script>
 
-<script src="resources/js/models/index.js"></script>
+
 
 
 </body>
