--- a/app/index.html
+++ b/app/index.html
@@ -27,16 +27,16 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-12">
-				<label for="color">Введите код цвета </label><input type="text" name="color" id="color" class="form-control">
+				<label for="color-text">Введите код цвета </label><input type="text" name="color-text" id="color-text" class="form-control">
 				<div class="menu-color">
-					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(255, 0, 0)')" style="background-color: RGB(255,0,0);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(0, 255, 0)')" style="background-color: RGB(0,255,0);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(0, 0, 255)')" style="background-color: RGB(0,0,255);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(255, 255, 0)')" style="background-color: RGB(255, 255, 0);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(255, 165, 0)')" style="background-color: RGB(255, 165, 0);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(255, 0, 255)')" style="background-color: RGB(255, 0, 255);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(0, 255, 255)')" style="background-color: RGB(0, 255, 255);"></button>
-					<button class="btn btn-success menu-color__item" onclick="colorButton('RGB(153, 50, 204)')" style="background-color: RGB(153, 50, 204);"></button>
+					<button class="btn btn-success menu-color__item" data-color="RGB(255, 0, 0)" style="background-color: RGB(255,0,0);"></button>
+					<button class="btn btn-success menu-color__item" data-color="RGB(0, 255, 0)" style="background-color: RGB(0,255,0);"></button>
+					<button class="btn btn-success menu-color__item" data-color="RGB(0, 0, 255)" style="background-color: RGB(0,0,255);"></button>
+					<button class="btn btn-success menu-color__item" data-color="RGB(255, 255, 0)" style="background-color: RGB(255, 255, 0);"></button>
+					<button class="btn btn-success menu-color__item" data-color="RGB(255, 165, 0)" style="background-color: RGB(255, 165, 0);"></button>
+					<button class="btn btn-success menu-color__item" data-color="RGB(255, 0, 255)" style="background-color: RGB(255, 0, 255);"></button>
+					<button class="btn btn-success menu-color__item" data-color="RGB(0, 255, 255)" style="background-color: RGB(0, 255, 255);"></button>
+					<button class="btn btn-success menu-color__item" data-color="RGB(153, 50, 204)" style="background-color: RGB(153, 50, 204);"></button>
 				</div>
 
 				<button class="btn btn-success btn-custom" id="changeColor" style="display: inline-block;">Cменить цвет</button>
@@ -46,7 +46,7 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-12">
-				<button class="btn btn-success" id="drawASquare" onclick="clearCanvas()">Стереть</button>
+				<button class="btn btn-success" id="clearCanvasBtn">Стереть</button>
 			</div>
 		</div>
 	</div>
@@ -60,8 +60,8 @@
 </div>
 <div class="row">
     <div class="col-xs-3">
-        <button class="btn btn-success btn-custom" onclick="saveToJSON()" id="savetojson">Save to JSON</button>
-        <button class="btn btn-success btn-custom" onclick="loadFromJSON()">Load from JSON</button>
+        <button class="btn btn-success btn-custom" id="saveToJSONBtn">Save to JSON</button>
+        <button class="btn btn-success btn-custom" id="loadFromJSONBtn">Load from JSON</button>
     </div>
 	<div class="col-xs-9">
         <textarea style="width:100%; margin-top: 10px;" rows="10" id="jsontext"></textarea>
@@ -83,7 +83,7 @@
 <script src="resources/js/script.js"></script>
 <script src="resources/js/models/index.js"></script>
 <script src="resources/js/util/index.js"></script>
-
+<script src="resources/js/controller/index.js"></script>
 <script src="resources/js/view/index.js"></script>
 <script src="resources/js/constructors/shape.js"></script>
 <script src="resources/js/constructors/circle.js"></script>
